# MNN-master

./: .gitignore  AGENTS.md
.codex/skills/mnn-android-apk-pipeline/: SKILL.md
.codex/skills/mnn-android-apk-pipeline/agents/: openai.yaml
.codex/skills/mnn-android-apk-pipeline/references/: android_project_requirements.md
.codex/skills/mnn-android-apk-pipeline/scripts/: download_oss_assets.py  mnn_android_pipeline.ps1  mnn_android_pipeline.py  upload_oss_assets.py
project/android/: build.gradle  build_32.sh  build_64.sh  gradle.properties  nativepub.gradle  oss_assets_manifest.json  settings.gradle
project/android/apps/PaddleOCR/: build.gradle
project/android/apps/PaddleOCR/src/main/: AndroidManifest.xml
project/android/apps/PaddleOCR/src/main/assets/: cls4_fp32.mnn
project/android/apps/PaddleOCR/src/main/cpp/: det_process.h  rec_process.cc
project/android/apps/base_MobilevitAPP/: build.gradle
project/android/apps/base_MobilevitAPP/src/main/: AndroidManifest.xml
project/android/apps/base_MobilevitAPP/src/main/assets/: mobilevitv2_075_int8.mnn
project/android/apps/base_PaddleOCRAPP/: build.gradle
project/android/apps/base_PaddleOCRAPP/src/main/: AndroidManifest.xml
project/android/apps/base_PaddleOCRAPP/src/main/assets/: GT.txt  config.txt
project/android/apps/base_PaddleOCRAPP/src/main/cpp/: CMakeLists.txt  Native.cc  cls_process.cc  det_process.cc  pipeline.h  rec_process.cc  rec_process.h  utils.h
project/android/apps/base_Yolov8nAPP/: build.gradle
project/android/apps/base_Yolov8nAPP/src/main/: AndroidManifest.xml
project/android/apps/base_Yolov8nAPP/src/main/assets/: yolov8n_standard_mobile_optimized.mnn
project/android/apps/opt_MobilevitAPP/: build.gradle
project/android/apps/opt_MobilevitAPP/src/main/: AndroidManifest.xml
project/android/apps/opt_MobilevitAPP/src/main/assets/: 1mobilevit2-7_int8.mnn  1mobilevit_qat_eps2_int8.mnn  mobilevit_qat_eps3_int8.mnn
project/android/apps/opt_PaddleOCRAPP/: build.gradle
project/android/apps/opt_PaddleOCRAPP/src/main/: AndroidManifest.xml
project/android/apps/opt_PaddleOCRAPP/src/main/assets/: cls4_fp16.mnn  det4_fp16.mnn
project/android/apps/opt_PaddleOCRAPP/src/main/cpp/: CMakeLists.txt  cls_process.cc  (+3 more)
project/android/apps/opt_Yolov8nAPP/: build.gradle
project/android/apps/opt_Yolov8nAPP/src/main/: AndroidManifest.xml
project/android/demo/gradle/wrapper/: gradle-wrapper.properties
project/android/doc/: apk_build_deploy.md  paddleocr_fp16_fp32_switch.md
project/android/gradle/wrapper/: gradle-wrapper.properties
source/jni/: CMakeLists.txt  mnnnetnative.cpp
(+15 files in other folders)
